--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.mvc.view.suffix=.jsp
 spring.security.user.name=user
 spring.security.user.password=user
 
-eureka.client.service-url.defaultZone= ${EURECA_HOST:http://localhost:8761/eureka/}
-spring.zipkin.base-url=${ZIPKIN_HOST:http://192.168.0.104:9411/}
+#eureka.client.service-url.defaultZone= ${EURECA_HOST:http://localhost:8761/eureka/}
+#spring.zipkin.base-url=${ZIPKIN_HOST:http://192.168.0.104:9411/}
