--- a/book-accounting-service/src/main/resources/application.properties
+++ b/book-accounting-service/src/main/resources/application.properties
@@ -1,19 +1,17 @@
-#spring.datasource.url=jdbc:mysql://35.228.144.187/library_db?useSSL=false&amp&serverTimezone=UTC
-
-spring.datasource.url=jdbc:h2:D:/VM/library-accounting-system/book-accounting-service/database/library_db
-spring.h2.console.enabled=true
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com/sql11483476
+#?useSSL=false&amp&serverTimezone=UTC
+#spring.datasource.url=jdbc:h2:D:/VM/library-accounting-system/book-accounting-service/database/library_db
+#spring.h2.console.enabled=true
+spring.datasource.username=sql11483476
+spring.datasource.password=AmS2aaaMCv
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 spring.application.name=BOOK-ACCOUNTING-SERVICE
 
 server.port=8000
 
-eureka.client.service-url.defaultZone= ${EUREKA_HOST:http://localhost:8761/eureka/}
-spring.zipkin.base-url=${ZIPKIN_HOST:http://192.168.0.104:9411/}
+#eureka.client.service-url.defaultZone= ${EUREKA_HOST:http://localhost:8761/eureka/}
+#spring.zipkin.base-url=${ZIPKIN_HOST:http://192.168.0.104:9411/}
 
-management.endpoint.health.probes.enabled=true
-management.health.livenessState.enabled=true
-management.health.readinessState.enabled=true
