--- a/book-accounting-service/deployment.yaml
+++ b/book-accounting-service/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app : book-accounting
 spec:
+  replicas: 1
   selector:
     matchLabels:
       project: book-accounting
@@ -19,28 +20,6 @@ spec:
           ports:
             - containerPort: 8000
       restartPolicy: Always
-
----
-apiVersion: autoscaling/v2beta1
-kind: HorizontalPodAutoscaler
-metadata:
-  name: book-accounting-autoscaling
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v2beta1v1
-    kind: Deployment
-    name: book-accounting
-  minReplicas: 1
-  maxReplicas: 3
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageUtilization: 70
-  - type: Resource
-    resource:
-      name: memory
-      targetAverageUtilization: 80
 
 ---
 apiVersion: v1
