--- a/book-accounting-service/src/main/resources/application.properties
+++ b/book-accounting-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com/sql11483476
+#spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com/sql11483476
 #?useSSL=false&amp&serverTimezone=UTC
-#spring.datasource.url=jdbc:h2:D:/VM/library-accounting-system/book-accounting-service/database/library_db
-#spring.h2.console.enabled=true
-spring.datasource.username=sql11483476
-spring.datasource.password=AmS2aaaMCv
+spring.datasource.url=jdbc:h2:D:/VM/library-accounting-system/book-accounting-service/database/library_db
+spring.h2.console.enabled=true
+#spring.datasource.username=sql11483476
+#spring.datasource.password=AmS2aaaMCv
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
